--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@iconify/react": "^5.0.2",
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
+    "@storybook/test": "^8.4.7",
+    "@vercel/analytics": "^1.4.1",
     "apexcharts": "^3.52.0",
     "dayjs": "^1.11.13",
     "history": "^5.3.0",
@@ -42,8 +44,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.1",
-    "simplebar-react": "^3.2.6",
-    "@storybook/test": "^8.4.7"
+    "simplebar-react": "^3.2.6"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
